--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-	<title>portfolio</title>
+	<title>serenity foundations</title>
 	<link rel="stylesheet"  type="text/css" href="style.css">
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -256,7 +256,7 @@
 			<div class="col-lg-4 col-md-4 col-sm-10 col-12 d-block m-auto">
 				<figure class="figure">
 					<img src="user-tie-solid.svg" class="figure-img img-fluid rounded-circle"
-					height="60px" weidth="60px">
+					height="75px" weidth="75px">
 					<figcaption>
 						<h4>Shivam Kumar</h4>
 						<p class="figure-caption">Innoveater and web handeler</p>
@@ -314,8 +314,8 @@
 
 <section class="contact" id="contact">
 	<div class="container text-center">
-		<h1>CONTACT US</h1>
-		<p>feel free to reach</p>
+		<h1>REACH US</h1>
+		<p>feel free to contact</p>
 
 		<div class="row">
 			<div class="col-lg-2 col-md-2 col-sm-10 col-12 d-block m-auto">
@@ -347,10 +347,13 @@
 			<a href="https://www.reddit.com/r/Serenity_Foundations2/"><img src="reddit-brands.svg" class="figure-img img-fluid rounded-circle"
 				height="75px" weidth="75px"> </a>
 		
-	</div>
+	        </div>
 		</div>	
+		
 	</div>
 </section>
+		 <nav class="navbar navbar-expand-ml bg-dark navbar-dark"></nav>
+		 
 
 </body>
 </html>
